Fix stars loading off-screen and position of hero text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,12 @@ header nav ul li a {
 
 /* Hero style starts */
 
+
+/* Begin animation for star fall in the hero */
+.hero {
+    position: relative; 
+}
+
 .stars {
     position: relative; 
     top: 0; 
@@ -161,9 +167,11 @@ header nav ul li a {
     width: 100%;
     height: 500px;
     background-color: var(--primary-color);
+    border: 1px solid red; 
+    overflow: hidden; /*prevents the stars from loading off screen*/
 }
 
-span {
+.stars span {
     position: absolute; 
     width: 4px; 
     height: 4px; 
@@ -177,7 +185,7 @@ span {
     animation: animate 3s linear infinite; 
 }
 
-span::before {
+.stars span::before {
     content: "";
     position: absolute; 
     top: 50%;
@@ -204,82 +212,87 @@ span::before {
     }
 }
 
-span:nth-child(1) {
+.stars span:nth-child(1) {
     top: 0;
     right: 0;
     left: initial; 
-    animation-delay: 0;
     animation-duration: 1s;
 }
 
-span:nth-child(2) {
+.stars span:nth-child(2) {
     top: 0;
     right: 80px;
     left: initial; 
-    /* animation-delay: -0.2s; */
     animation-duration: 3s;
 }
 
-span:nth-child(3) {
+.stars span:nth-child(3) {
     top: 80px;
     right: 80px;
     left: initial;
-    /* animation-delay: 0.2s; */
     animation-duration: 3s;
 }
 
-span:nth-child(4) {
+.stars span:nth-child(4) {
     top: 0;
     right: 180px;
     left: initial;
-    /* animation-delay: 0.6s; */
     animation-duration: 1.5s;
 }
 
-span:nth-child(5) {
+.stars span:nth-child(5) {
     top: 0;
     right: 400px;
     left: initial;
-    /* animation-delay: 0.8s; */
     animation-duration: 2.5s;
 }
 
-span:nth-child(6) {
+.stars span:nth-child(6) {
     top: 0;
     right: 600px;
     left: initial;
-    /* animation-delay: 1s; */
     animation-duration: 3s;
 }
 
-span:nth-child(7) {
+.stars span:nth-child(7) {
     top: 300px;
     right: 0;
     left: initial;
-    /* animation-delay: 1.2s; */
     animation-duration: 1.75s;
 }
 
-span:nth-child(8) {
+.stars span:nth-child(8) {
     top: 0;
     right: 700px;
     left: initial;
-    /* animation-delay: 1.4s; */
     animation-duration: 1.25s;
 }
 
-span:nth-child(9) {
+.stars span:nth-child(9) {
     top: 0;
     right: 1000px;
     left: initial;
-    /* animation-delay: 0.75s; */
     animation-duration: 2.25s;
 }
 
-span:nth-child(10) {
+
+.stars span:nth-child(10) {
     top: 0;
     right: 450px;
     left: initial;
-    /* animation-delay: 2.75s; */
     animation-duration: 2.25s;
+} 
+
+/* Hero Star Animation End */
+
+/* Hero Banner Style Start */
+
+.stars h2 {
+    text-align: center; 
+    padding: 4rem 0; 
+    font-size: 70pt; 
+}
+
+.stars p {
+    text-align: center; 
 }
